[gd_scene load_steps=20 format=3 uid="uid://bckf4m2s4iseg"]

[ext_resource type="Script" path="res://src/scenes/PosTween.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cqslxljwyr3r6" path="res://src/scenes/uiElements/FadeScreen.tscn" id="2"]
[ext_resource type="Script" path="res://src/scenes/LevelSelector.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://badf2pxbdp2qj" path="res://assets/guiTextures/BackButton.png" id="4"]
[ext_resource type="Theme" uid="uid://egspkbwxefg2" path="res://src/scenes/uiElements/GuiElementsTheme.tres" id="5"]
[ext_resource type="AudioStream" uid="uid://b3uxk765865bb" path="res://assets/audio/soundEffects/playSound_01.ogg" id="7"]
[ext_resource type="Texture2D" uid="uid://dk5kimpd38gpe" path="res://assets/guiTextures/navArrowBtn_001.png" id="9"]
[ext_resource type="Texture2D" uid="uid://vjdv6gigo66x" path="res://assets/guiTextures/navArrowBtn_001_left.png" id="10"]
[ext_resource type="PackedScene" uid="uid://coiuaso2vrnja" path="res://src/scenes/levels/AmazingLevel.tscn" id="10_gpoiw"]
[ext_resource type="Script" path="res://src/scenes/uiElements/clickable_button.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://dp3w8v0xmgvxa" path="res://src/scenes/LevelTab.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://bjtuor3y3wb6r" path="res://src/scenes/levels/Level2.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://c7pobxgoke05j" path="res://src/scenes/levels/SpiderTests.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://cmfl8nfwxqblk" path="res://src/scenes/levels/Explorers.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://b4sjtw5fym8oh" path="res://src/scenes/levels/ArrowTriggerTest.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://d0uvbrpqy6inw" path="res://src/scenes/levels/TestLevel.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://bwvugkrl57uoj" path="res://src/scenes/levels/Level1.tscn" id="18"]
[ext_resource type="PackedScene" path="res://src/scenes/levels/SlopeDemo.tscn" id="19"]
[ext_resource type="PackedScene" uid="uid://bmxo5ubrxke67" path="res://src/scenes/levels/Trigger Test.tscn" id="20"]

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5")
script = ExtResource("3")

[node name="Levels" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 14400.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Playground" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("13")

[node name="Trigger Test" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("20")

[node name="Level1" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("18")

[node name="SlopeDemo" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("19")

[node name="ArrowTriggerTest" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("16")

[node name="Explorers" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("15")

[node name="TestLevel" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("17")

[node name="SpiderTests" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("14")

[node name="My Amazing Level" parent="Levels" instance=ExtResource("12")]
layout_mode = 2
used_level = ExtResource("10_gpoiw")

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 123.0
offset_bottom = 136.0
pivot_offset = Vector2(46, 53)
icon = ExtResource("4")
flat = true
expand_icon = true
script = ExtResource("11")

[node name="Switch" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -123.0
offset_bottom = 123.0
alignment = 1

[node name="Left" type="Button" parent="Switch"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 5
icon = ExtResource("10")
flat = true
icon_alignment = 1
script = ExtResource("11")

[node name="Separator" type="VSeparator" parent="Switch"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="Button" parent="Switch"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 5
icon = ExtResource("9")
flat = true
icon_alignment = 1
script = ExtResource("11")

[node name="PosTween" type="Node" parent="Switch"]
script = ExtResource("1")

[node name="FadeScreen" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="playLevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[connection signal="button_up" from="GoBackButton" to="." method="_on_GoBackButton_button_up"]
[connection signal="pressed" from="Switch/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Switch/Right" to="." method="_on_Right_pressed"]
[connection signal="fade_finished" from="FadeScreen" to="." method="_on_FadeScreen_fade_finished"]
